Python Advance Assignment

--- a/Assignment_1.12.ipynb
+++ b/Assignment_1.12.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "s='shiavnsh'\n",
+    "s='Danish'\n",
     "s[2]='t'\n",
     "print(s)"
    ]
@@ -245,10 +245,10 @@
     }
    ],
    "source": [
-    "print('shivansh'+'jayara')\n",
-    "print('shivansh '*2)\n",
-    "print(str.__add__('shivansh','jayara'))\n",
-    "print(str.__mul__('shivansh ',2))"
+    "print('Danish'+'Khan')\n",
+    "print('Danish '*2)\n",
+    "print(str.__add__('Danish','Khan'))\n",
+    "print(str.__mul__('Danish ',2))"
    ]
   },
   {
